--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ ol, ul {
 
 :root {
   --color1: black;
-  --color2: rgb(6, 45, 90);
-  --color3: #22272c;
+  --color2: rgb(24, 37, 51);
+  --color3: #ffffff;
   --color4: maroon
 
 
