--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,4 +1,11 @@
 footer {
     height: 50px;
-    
+    font-size: larger;
+}
+
+
+a {
+    font-size: 35px;
+    opacity: 0.6;
+    color: var(--color4);
 }
