--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,9 +1,27 @@
 header {
     height: 250 px;
-
+    position: relative;
 }
 
 header h1 {
         font-family: 'Pacifico', cursive;
-    font-size: 30px;
+    font-size: 50px;
+    position: relative;
+    margin-left: -300px;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.ghost{
+    color: black;
+}
+
+header img {
+    position: absolute;
+    margin-left: -12px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* opacity: .1; */
+    z-index: 0;
+    object-fit: cover;
 }
