--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,15 +1,16 @@
 header .nav-link {
     text-decoration: none;
-    color: var(--color4);
-    opacity: 0.6;
-
+    color: var(--color3);
+    opacity: 1;
+    z-index: 1;
 }
 
 header .nav-link:hover {
     opacity: 1;
+    color: var(--color4);
 }
 
 header .nav-link.active {
-color: black;
+color: purple;
 
 }
