--- a/src/components/Page/style.css
+++ b/src/components/Page/style.css
@@ -2,3 +2,15 @@ main h2{
     font-size: 2.5rem;
     font-family: 'Pacifico', cursive; ;
 }
+
+.skills .list-group-item{
+    background-color: transparent;
+    color: var(--color4);
+    border-color: black;
+    /* border-radius: 5px; */
+}
+
+.resume{
+    font-size: large;
+    color: var(--color4);
+}
