--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,15 +1,21 @@
 .linkColor{
     color: black;
-    font-size: 18px;
     font-weight: 1000;
+    font-size: larger;
+    opacity: 1;
 }
 
 .desc{
-    color: rgb(255, 145, 0);
-    opacity: 0.6;
+    color: rgb(184, 6, 6);
+    opacity: 1;
 }
 
 .desc:hover{
     opacity: 1;
     color: rgb(255, 145, 0);
+}
+
+.blur:hover {
+    opacity: 1;
+    background-color: var(--haze);
 }
